Solved alignment isuue

--- a/sites/all/themes/mortgagespeak/src/sass/style.scss
+++ b/sites/all/themes/mortgagespeak/src/sass/style.scss
@@ -1575,23 +1575,26 @@ a {
     float: right;
     /*height: 55px;*/
     margin: 0;
-    padding: 0 13px;
+    padding: 4px 13px;
     background-color: #F07A22;
     color: $white;
     text-align: center;
     @include border-radius(3px);
     .totalsum {
       display: inline-block;
-      padding: 7px 0 3px;
-      font-size: 26px;
+      padding: 7px 0 0px;
+      font-size: 30px;
       letter-spacing: 2px;
+      vertical-align: top;
     }
     .totaltext {
       display: inline-block;
-      max-width: 50px;
-      padding-bottom: 3px;
+      max-width: 62px;
+      padding-bottom: 1px;
       padding-left: 5px;
-      font-size: 12px;
+      font-size: 13px;
+      line-height: 15px;
+      letter-spacing: 1px;
       text-align: left;
     }
   }
